--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>PDF Viewer</title>
+    <title>Mu PDF Viewer</title>
     <link rel="stylesheet" href="./build/bundle.css">
 </head>
 <body>
